; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/bsnmpd/modules/snmp_bridge/extr_bridge_if.c_bridge_new_root.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/bsnmpd/modules/snmp_bridge/extr_bridge_if.c_bridge_new_root.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bridge_if = type { i32 }
%struct.snmp_value = type { i32 }

@oid_newRoot = common dso_local global i32 0, align 4
@oid_begemotTopologyChange = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bridge_if*)* @bridge_new_root to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bridge_new_root(%struct.bridge_if* %0) #0 {
  %2 = alloca %struct.bridge_if*, align 8
  %3 = alloca %struct.snmp_value, align 4
  store %struct.bridge_if* %0, %struct.bridge_if** %2, align 8
  %4 = call %struct.bridge_if* (...) @bridge_get_default()
  %5 = load %struct.bridge_if*, %struct.bridge_if** %2, align 8
  %6 = icmp eq %struct.bridge_if* %4, %5
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = call i32 (i32*, %struct.snmp_value*, ...) @snmp_send_trap(i32* @oid_newRoot, %struct.snmp_value* null)
  br label %9

9:                                                ; preds = %7, %1
  %10 = load %struct.bridge_if*, %struct.bridge_if** %2, align 8
  %11 = call i32* @bridge_basename_var(%struct.bridge_if* %10, %struct.snmp_value* %3)
  %12 = icmp eq i32* %11, null
  br i1 %12, label %13, label %14

13:                                               ; preds = %9
  br label %16

14:                                               ; preds = %9
  %15 = call i32 (i32*, %struct.snmp_value*, ...) @snmp_send_trap(i32* @oid_begemotTopologyChange, %struct.snmp_value* %3, %struct.snmp_value* null)
  br label %16

16:                                               ; preds = %14, %13
  ret void
}

declare dso_local %struct.bridge_if* @bridge_get_default(...) #1

declare dso_local i32 @snmp_send_trap(i32*, %struct.snmp_value*, ...) #1

declare dso_local i32* @bridge_basename_var(%struct.bridge_if*, %struct.snmp_value*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
